objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ConversationId2__c</fullName>
        <externalId>true</externalId>
        <label>ConversationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationId__c</fullName>
        <label>ConversationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternetMessageId2__c</fullName>
        <externalId>true</externalId>
        <label>InternetMessageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternetMessageId__c</fullName>
        <label>InternetMessageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCreatedBySync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCreatedBySync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOpenedByRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOpenedByRecipient</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>